--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -359,7 +359,7 @@ jobs:
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
 
-#   smoke-test:
+  smoke-test:
     docker:
       # Lightweight Docker image 
       - image: python:3.7-alpine
@@ -396,7 +396,7 @@ jobs:
             # your code here
             URL="http://udapeople-${CIRCLE_WORKFLOW_ID:0:7}.s3-website-us-east-1.amazonaws.com/#/employees"            
             echo ${URL} 
-            if curl -s ${URL} | grep "Welcome"
+            if curl -s ${URL} | grep "CONCAT"
             then
               return 0
             else
