--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -187,6 +187,7 @@ jobs:
             - project/.circleci/ansible/inventory.txt   
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          when: on_fail
 
   configure-infrastructure:
     docker:
@@ -218,6 +219,7 @@ jobs:
       # Here's where you will add some code to rollback on failure   
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          when: on_fail
 
   run-migrations:
     docker:
@@ -254,7 +256,8 @@ jobs:
               echo "MIGRATION FAILED"
             fi       
       - destroy-environment:
-          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"      
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          when: on_fail      
 
   deploy-frontend:
     docker:
@@ -298,8 +301,10 @@ jobs:
       # Here's where you will add some code to rollback on failure   
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          when: on_fail
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          when: on_fail
 
   deploy-backend:
     docker:
@@ -354,8 +359,10 @@ jobs:
       # Here's where you will add some code to rollback on failure  
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          when: on_fail
       - revert-migrations:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          when: on_fail
 
   smoke-test:
     docker:
@@ -402,8 +409,10 @@ jobs:
       # Here's where you will add some code to rollback on failure  
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          when: on_fail
       - revert-migrations:
-          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"  
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}" 
+          when: on_fail 
 
   cloudfront-update:
     docker:
@@ -442,8 +451,10 @@ jobs:
       # Here's where you will add some code to rollback on failure
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          when: on_fail
       - revert-migrations:
-          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}" 
+          workflow_id: "${CIRCLE_WORKFLOW_ID:0:7}"
+          when: on_fail 
 
 # cleanup:
 #     docker:
