--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -326,8 +326,8 @@ jobs:
           name: Deploy backend
           working_directory: ./.circleci/ansible
           command: |
-            cat inventory
-            ansible-playbook -i inventory deploy-server.yaml -vv
+            cat inventory.txt
+            ansible-playbook -i inventory.txt deploy-server.yaml -vv
 
       # Here's where you will add some code to rollback on failure  
       - destroy-environment:
