--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -327,7 +327,7 @@ jobs:
           working_directory: ./.circleci/ansible
           command: |
             cat inventory.txt
-            ansible-playbook -i inventory.txt deploy-backend.yaml -vv
+            ansible-playbook -i inventory.txt deploy-backend.yml -vv
 
       # Here's where you will add some code to rollback on failure  
       - destroy-environment:
